Update ChatActivity.java